--- a/pom.xml
+++ b/pom.xml
@@ -202,6 +202,13 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- envio de email -->
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4.7</version>
+        </dependency>
+
     </dependencies>
 
 </project>
