repository refactor (delete duplicated files that are now in subdirectories)

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,22 @@
-target/
-.idea/
-.settings/
-.project
-.classpath
-*.iml
+**/target/
+**/.idea/
+**/.settings/
+**/.project
+**/.classpath
+**/*.iml
+**/*.swo
+**/*.swp
+
+**/modules/.settings/
+**/.vscode/
+**/modules/.vscode/
+
+**/node_modules/
+**/.node_modules/
+
+**/.DS_STORE
+
+**/npm-debug.log
+**/yarn-error.log
+
+
